--- a/intro.html
+++ b/intro.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="intro.css">
-    <title>Happy New Year 2023</title>
+    <title>Happy New Year 204</title>
 </head>
 <body>
     <div class="box-slider">
@@ -105,7 +105,7 @@
                 <img src="image/cat.png" alt="">
             </div>
             <div class="box-number">
-                <div class="number2023">
+                <div class="number2024">
                     <div class="number">
                         <span>2</span>
                     </div>
@@ -194,7 +194,7 @@
                             <div class="text-content">
                                 <h2>Happy New</h2>
                                 <h1>Year</h1>
-                                <span>2023</span>
+                                <span>2024</span>
                             </div>
                         </div>
                     </div>
@@ -210,19 +210,17 @@
                 <div class="right">
                     <div class="content">
                         <div class="title">
-                            <h1>&#129505Gửi em!</h1>
+                            <h1>&#129505Gửi bé !</h1>
                         </div>
-                        <p>Năm mới, anh chỉ chúc em được nhiều sức khỏe thôi.
-                             Còn về hạnh phúc và niềm vui, anh mong rằng chính 
-                             mình sẽ là người mang những điều đó đến với em. Yêu 
-                             em nhiều! Năm mới đến rồi, một năm qua thật đặc biệt 
-                             với anh và cả em nữa. Năm mới đến đồng nghĩa với việc 
-                             anh lại được nối dài năm tháng yêu thương chăm sóc em. 
-                             Anh chúc em tràn đầy hạnh phúc ngọt ngào hãy gìn giữ và 
-                             nuôi dưỡng tình yêu của chúng mình em nhé.
+                        <p>Năm mới,chị chúc em nhiều sức khỏe thôi.
+                        Lun vui vẻ hạnh phúc,học hành thuận lợi lun
+                        được học bổng cao. Công việc ở ban chấp hành 
+                        lun thuận lợi, lun được mọi người iu quý tin tưởng
+                        Mọi điều em mong sẽ lun có thể thành hiện thực.Cảm
+                        ơn đã chơi vs nhau kkkk 💖
                         </p>
                         <div class="fixedContent">
-                            <h3>Người gửi: Hồ Trung Nam</h3>
+                            <h3>Người gửi: Phan Ánh Ngọc Thư</h3>
                         </div>
                     </div>
                 </div>
