--- a/intro.html
+++ b/intro.html
@@ -229,7 +229,7 @@
         </div>
     </div>
 
-    <audio id="song">
+    <audio id="song"autoplay>
         <source src="image/nhac.mp3" type="audio/mp3">
     </audio>
 
